--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
     <script src="./scripts/main.js" type="module" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <main class="container">
+      <h2 class="h2 title">Lorem ipsum dolor sit amet.</h2>
+      <p class="subtitle">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, enim.
+      </p>
+    </main>
+  </body>
 </html>
